<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="_Debug" Id="{c602205e-748f-438e-a90c-f30a653e50a0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL INTERNAL
	stDebug				: ARRAY[0..Param.DEBUG_CAP] OF ST_DebugInfo;
	nDebugLen			: UDINT;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>